--- a/sites/all/themes/bootstrap_lux/css/style.css
+++ b/sites/all/themes/bootstrap_lux/css/style.css
@@ -2,53 +2,20 @@
  * Place your custom styles here.
 
  */
+
+/*karosel settings*/
+
 .jcarousel-skin-tango .jcarousel-container-horizontal{
     width:auto;
 
 }
 
 
-
-/*.row-bordered:after {*/
-  /*content: "";*/
-  /*display: block;*/
-  /*border: 1px solid black;*/
-  /*margin: 0 15px;*/
-/*}*/
-
-
-/*.btn-circle {*/
-    /*width: 30px;*/
-    /*height: 30px;*/
-    /*text-align: center;*/
-    /*padding: 6px 0;*/
-    /*font-size: 15px;*/
-    /*line-height: 1.428571429;*/
-    /*border-radius: 15px;*/
-/*}*/
-/*.btn-circle.btn-responsive {*/
-    /*position: relative;*/
-
-    /*border-radius: 50% !important;*/
-    /*width: 100% !important;*/
-    /*padding: 0 !important;*/
-    /*padding-bottom: 100%!important;*/
-/*}*/
-
-/*.front-circle {*/
-    /*!*margin: 0 auto;*!*/
-/*!*}*!*/
-
-/*.header-name-hostel{*/
-
-    /*text-align: center;*/
-    /*background: none;*/
-/*}*/
-
+/*podesuvanje na html i body*/
 html, body{height:100%;}
 
 body.front {
-    /*background-image: url('../images/hotel-room-3840x2160-001.jpg')!important;;*/
+
 
 
 background: url('../images/hotel-room-3840x2160-001.jpg') no-repeat   center center fixed;
@@ -57,104 +24,24 @@ background: url('../images/hotel-room-3840x2160-001.jpg') no-repeat   center cen
     -o-background-size: cover;
     background-size: cover;
 
-
-    /*background-color: #FFFFFF !important;*/
-
-    /*background-repeat: no-repeat !important;*/
-    /*background-attachment: scroll !important;*/
-    /*background-position: left top !important;*/
-    /*background-size: cover !important;*/
-    /*-webkit-background-size: cover !important;*/
-    /*-moz-background-size: cover !important;*/
-    /*-o-background-size: cover !important;*/
-
-
-
-
-    /*background-color: #cccccc;*/
-    /*background-repeat: no-repeat;*/
-    /*max-width: 100%;*/
-    /*position: relative;*/
-    /*margin: auto;*/
-    /*background-repeat:no-repeat;*/
-    /*background-size:contain;*/
-    /*background-position:center;*/
-    /*background-repeat:no-repeat;*/
-    /*-webkit-background-size:cover;*/
-
-    /*-moz-background-size:cover;*/
-    /*-o-background-size:cover;*/
-    /*background-size:cover;*/
 }
 
 
 
-
-
-/*.front-circle{*/
-    /*!*width:20%;*!*/
-    /*!*display:inline-block;*!*/
-    /*margin-left:2.25%;*/
-    /*margin-right:2.25%;*/
-/*}*/
-
-/*@media (min-width: 605px) {*/
-    /*.container {*/
-        /*width: 750px;*/
-    /*}*/
-    /*.btn-circle {*/
-        /*width:200px;*/
-
-    /*}*/
-/*}*/
-/*@media (max-width: 767px) {*/
-    /*.front-circle{*/
-        /*width:29%;*/
-        /*margin-left:10%;*/
-        /*margin-right:10%;*/
-        /*margin-top: 50px;*/
-    /*}*/
-/*}*/
-/*@media (min-width: 1200px) {*/
-    /*.container {*/
-        /*width: 1170px;*/
-    /*}*/
-/*}*/
-
-
-
-
-
-
-
-
-
-
-
-
-/*body {*/
-    /*font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;*/
-/*}*/
-
-/*.text-vertical-center {*/
-    /*position: relative;*/
-    /*!*display: table-cell;*!*/
-    /*text-align: center;*/
-    /*vertical-align: middle;*/
-/*}*/
 
 h1 {
     position: relative;
     margin: 0;
     padding: 0;
     font-size: 4.5em;
-    /*font-weight: 700*/
+
 }
+
 
 /* Custom Button Styles */
 
 .btn-dark {
-    /*border-radius: 0;*/
+
     color: #6f6f6f;
     background-color: rgba(0,0,0,0.4);
 }
@@ -179,32 +66,15 @@ h1 {
     background-color: rgba(255,255,255,0.8);
 }
 
-/* Custom Horizontal Rule */
 
-/*hr.small {*/
-    /*max-width: 100px;*/
-/*}*/
-
-
-/*h3{*/
-    /*!*position: absolute;*!*/
-
-    /*!*display: flex;*!*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-
-
-    /*color: white;*/
-    /*font: bold 15px/13px Helvetica, Verdana, Tahoma;*/
-
-    /*!*min-width: 14px;*!*/
-    /*!*padding: 4px 3px 0 3px;*!*/
-    /*!*text-align: center;*!*/
-/*}*/
 
 a:hover{
     text-decoration:none;
 }
+
+
+
+/*front page circle style*/
 .circle:active,
 .circle:focus,
 .circle:hover{
@@ -302,6 +172,83 @@ a:hover{
         line-height: 250px;
     }
 }
+
+
+
+a.carousel-next{
+    display: none;
+}
+
+a.carousel-prev{
+    margin-top: 20px;
+    display: none;
+}
+
+
+.slika{
+    padding-left: 50px;
+    margin-bottom: 10px;
+    margin-right: 0px;
+    color: darkblue;
+}
+.field-slideshow-pager li{
+
+}
+
+.field-slideshow-carousel-wrapper{
+    /*position: relative;*/
+    margin-top: 10px;
+    width:100%;
+    margin-left: 0;
+    margin-right: 0;
+}
+.jcarousel-item{
+    width:100px !important;
+    /*margin-left: 2.5px;*/
+    /*margin-right: 2.5px;*/
+}
+
+li img{
+    text-align: center;
+    align-items: center;
+    /*margin:auto;*/
+}
+
+.field-slideshow-image{
+
+}
+
+.field-slideshow-wrapper{
+
+    width: 290px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
