--- a/sites/all/themes/bootstrap_lux/css/style.css
+++ b/sites/all/themes/bootstrap_lux/css/style.css
@@ -130,6 +130,12 @@ a:hover{
     }
 
 
+
+    .textprice{
+
+    }
+
+
 }
 
 /* Extra Small Devices, Phones */
@@ -235,7 +241,18 @@ li img{
 }
 
 
+.textprice a {
+    color: white;
+}
 
+.textprice {
+    margin-top: 50px;
+}
+
+
+.textclass {
+    margin-bottom:50px;
+}
 
 
 
